<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.henry.first.SecondActivity">

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:text="@string/team"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:text="@string/score"
            android:textSize="65sp" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25sp"
            android:background="@android:color/holo_blue_dark"
            android:onClick="btnAdd1"
            android:text="@string/btn1"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25sp"
            android:background="@android:color/holo_blue_dark"
            android:onClick="btnAdd2"
            android:text="@string/btn2"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25sp"
            android:background="@android:color/holo_blue_dark"
            android:onClick="btnAdd3"
            android:text="@string/btn3"
            android:textSize="25sp" />


    </LinearLayout>

    <TextView
        android:layout_width="3dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorPrimary"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/team2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:text="@string/team2"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/score2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:text="@string/score"
            android:textSize="65sp" />

        <Button
            android:id="@+id/btn11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25sp"
            android:background="@android:color/holo_blue_dark"
            android:onClick="btnAdd1"
            android:text="@string/btn1"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25sp"
            android:background="@android:color/holo_blue_dark"
            android:onClick="btnAdd2"
            android:text="@string/btn2"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25sp"
            android:background="@android:color/holo_blue_dark"
            android:onClick="btnAdd3"
            android:text="@string/btn3"
            android:textSize="25sp" />


    </LinearLayout>

</LinearLayout>

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="463dp"
        android:onClick="Reset"
        android:text="@string/reset" />


</RelativeLayout>